# oye-mas

./: .gitignore  _v4_items.json
youle/agents/: pyproject.toml
youle/agents/_common/: boundary.py  consumer.py  cross_call.py  flywheel_emitter.py  llm.py  mcp_client.py  oss_writer.py  protocol.py
youle/agents/av/: main.py
youle/agents/av/celery_tasks/: video_workflow.py
youle/agents/av/handlers/: audio_to_text.py  bgm_select.py  tts_generate.py  video_compose.py
youle/agents/document/: main.py
youle/agents/document/handlers/: extras.py  image_concat_long.py
youle/agents/image/: main.py
youle/agents/image/handlers/: batch_generate.py  extras.py  image_download.py  image_quality_check.py  style_extract.py
youle/agents/text/: main.py
youle/agents/text/handlers/: extras.py  long_writing.py  short_writing.py  version_compare.py  web_search.py
youle/backend/: README.md  alembic.ini  pyproject.toml
youle/backend/alembic/: env.py
youle/backend/alembic/versions/: 20260505_0001_initial_schema.py  20260506_0002_materials_prompts.py
youle/backend/app/: __init__.py  celery_app.py  db.py  logging.py  main.py  mcp_client.py  redis_client.py  router.py
youle/backend/app/api/: auth.py  conversations.py  flywheel.py  hitl.py  library.py  messages.py  skills.py  support.py  tasks.py  upload.py  ws.py
youle/backend/app/config/: prompts.py  settings.py  templates.py
youle/backend/app/models/: __init__.py  agent_status.py  artifact.py  bgm.py  conversation.py  emotion_signal.py  hitl_gate.py  material.py  message.py  mode_switch_log.py  prompt_improvement.py  quota.py  skill.py  skill_draft.py  task.py  user.py  user_preference.py  workflow_trace.py
youle/backend/app/orchestrator/: __init__.py  clarification.py  hitl_gate.py  input_validator.py  intent.py  interaction.py  interrupt.py  mode_manager.py  runner.py  runner_factory.py  skill_match.py  task_compiler.py
youle/backend/app/schemas/: __init__.py  agent.py  conversation.py  hitl.py  message.py  ws.py
youle/backend/app/services/: agent_status.py  brief_builder.py  conversation.py  dispatcher.py  flywheel.py  heartbeat_consumer.py  hitl.py  metrics.py  oss.py  private_chat.py  quota.py  quota_enforce.py  result_consumer.py  skill_loader.py  support_agent.py
youle/backend/app/ws/: __init__.py  manager.py
youle/backend/tests/: conftest.py
youle/backend/tests/integration/: test_anti_fraud_e2e.py  test_anti_fraud_runner_e2e.py  test_video_compose_real.py
youle/backend/tests/mcp/: test_mcp_client.py
youle/backend/tests/prompts/: README.md
youle/backend/tests/smoke/: test_infra.py
youle/backend/tests/unit/: test_agent_consumer_retry.py  test_agent_handlers_mock.py  test_agent_status.py  test_agent_status_publish.py  test_audio_to_text_mock.py  test_brief_merge.py  test_conversation_members.py  test_dag_compile.py  test_flywheel_reflexion_emit.py  test_interaction_orchestrator.py  test_interrupt_v1_v2_split.py  test_langgraph_compiler.py  test_langgraph_reflexion.py  test_langgraph_runtime.py  test_langgraph_subgraph.py  test_mention_routing.py  test_mode_manager.py  test_orchestrator_input_validator.py  test_quota_enforce.py  test_quota_plan_ask_no_charge.py  test_runner_scheduler.py  (+4 more)
youle/mcp_servers/: README.md  pyproject.toml
youle/mcp_servers/_shared/: http_app.py
youle/mcp_servers/audio_tools/: server.py
youle/mcp_servers/document_tools/: server.py
youle/mcp_servers/image_tools/: server.py
youle/mcp_servers/oss/: server.py
youle/mcp_servers/platform_publish/: server.py
youle/mcp_servers/search/: server.py
youle/mcp_servers/video_tools/: server.py
(+159 files in other folders)
