[project]
name = "youle-agents"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "redis>=5.0",
    "httpx>=0.27",
    "pydantic>=2.9",
    "structlog>=24.1",
    "celery>=5.4",
    "moviepy>=1.0.3",
    "pillow>=11.0",
    "python-multipart>=0.0.9",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7", "mypy>=1.13"]

[tool.ruff]
target-version = "py312"
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["_common", "text", "document", "image", "av"]
