[project]
name = "youle-backend"
version = "0.1.0"
description = "「有了」后端 — 主编排 + REST/WS API + Celery"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "redis>=5.0",
    "httpx>=0.27",
    "celery>=5.4",
    "structlog>=24.1",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "qdrant-client>=1.13",
    "boto3>=1.35",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "mcp>=1.0",
    "pgvector>=0.3",
    "tenacity>=9.0",
    "orjson>=3.10",
    "websockets>=13.0",
    "sentry-sdk[fastapi]>=2.18",
    "slowapi>=0.1.9",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "fakeredis>=2.26",
    "ruff>=0.7",
    "mypy>=1.13",
    "testcontainers[postgres]>=4.8",
    "types-pyyaml",
    "types-passlib",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TID"]
# B008:FastAPI 的 Depends() 必须用在 default 位置 — 框架要求,不算误用
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["celery.*", "passlib.*", "jose.*", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
branch = true
source = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
