[project]
name = "youle-mcp-servers"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "structlog>=24.1",
    "mcp>=1.0",
    # tool-specific deps(按 server 拆分):
    # search: tavily-python, playwright
    # image_tools: pillow, rembg, opencv-python
    # video_tools: moviepy, ffmpeg-python, faster-whisper
    # audio_tools: faster-whisper
    # document_tools: python-pptx, openpyxl, python-docx, pdfplumber, reportlab, pytesseract
    # oss: boto3, oss2
    "pillow>=11.0",
    "boto3>=1.35",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["_shared", "search", "image_tools", "video_tools", "audio_tools", "document_tools", "oss", "platform_publish"]
